--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,37 @@
-h1{
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Rubik Mono One', sans-serif;
+}
+
+
+.full-page{
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 100vh;
+    position: relative;
+    font-size: 40px;
+}
+.page-1{
+    background-color: skyblue;
+    background-image: url(../img/01.png);
     color: red;
+}
+.page-2{
+    background-color:tomato;
+    background-image: url(../img/02.png);
+    color: goldenrod;
+}
+.page-3{
+    background-color:wheat;
+    background-image: url(../img/03.png);
+    color:darkred ;
+}
+.title-page{
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%) ;
+
 }
