--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Rubik Mono One', sans-serif;
+    scroll-behavior: smooth;
 }
 
 
@@ -33,5 +34,34 @@
     top: 80%;
     left: 50%;
     transform: translate(-50%, -50%) ;
+}
+#main-menu{
+    z-index: 1;
+    position: fixed;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    }
+#main-menu li{
+    border-radius: 50px;
+    margin-right: 20px;
+    font-size: 20px;
+    list-style-type: none;
+}
+#main-menu a{
+    background-color: white;
+    padding: 10px 15px;
+    display: inline-block;
+    margin: 10px;
+    border-radius: 50%;
+    text-decoration: none;
+    color: #000;
+    font-weight: bold;
+}
+#main-menu a:hover{
+    color: white;
+    background-color: teal;
+    transform: scale(1.8);
+
 
 }
