--- a/style/style.css
+++ b/style/style.css
@@ -8,40 +8,41 @@
 
 
 .full-page{
-    background-repeat: no-repeat;
-    background-position: center;
     height: 100vh;
     position: relative;
     font-size: 40px;
 }
 .page-1{
     background-color: skyblue;
-    background-image: url(../img/01.png);
     color: red;
 }
 .page-2{
     background-color:tomato;
-    background-image: url(../img/02.png);
     color: goldenrod;
 }
 .page-3{
     background-color:wheat;
-    background-image: url(../img/03.png);
     color:darkred ;
 }
-.title-page{
+
+.content{
     position: absolute;
-    top: 80%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) ;
+    text-align: center;
 }
+
+
+
+
 #main-menu{
     z-index: 1;
     position: fixed;
     right: 0;
     top: 50%;
     transform: translateY(-50%);
-    }
+ }
 #main-menu li{
     border-radius: 50px;
     margin-right: 20px;
@@ -62,6 +63,10 @@
     color: white;
     background-color: teal;
     transform: scale(1.8);
-
-
 }
+#main-menu a:active{
+        transform: scale(1.5);
+        color: darkred;
+        background-color: goldenrod;
+}
+
